# eingang

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
backend/: Cargo.toml
backend/src/: io.rs  lib.rs  main.rs  routes.rs
backend/src/routes/: journal.rs  mod.rs  notes.rs  tasks.rs  threads.rs
backend/src/routes/views/: journal.rs
base/: Cargo.toml
base/src/: config.rs  lib.rs
base/src/models/: data.rs  eingang.rs  mod.rs
base/src/models/eingang/: journal.rs  meta.rs  mod.rs  note.rs  task.rs  thread.rs
frontend/: Cargo.toml
frontend/src/: api.rs  app.rs  lib.rs  route.rs
frontend/src/components/: notes.rs
frontend/src/pages/: mod.rs  note.rs  note_edit.rs  notes.rs
src/: lib.rs
static/: index.html
