[package]
name = "eingang-backend"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.*"
serde = "1.0.*"
serde_qs = { version = "0.7.*", features = ["actix"]}
