[package]
name = "eingang-backend"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"
license = "MIT"
description = "Take notes using Zettelkasten method with Markdown files (backend)."
homepage = "https://github.com/ucyo/eingang/"
documentation = "https://github.com/ucyo/eingang/"
repository = "https://github.com/ucyo/eingang/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.*"
actix-cors = "0.4.*"
serde_qs = { version = "0.7.*", features = ["actix"]}
eingang = { version = "0.1.*", path = "../base/" }
serde_json = "1.0.*"
env_logger = "0.7.*"
uuid = { version = "0.8.*", features = ["serde", "wasm-bindgen", "v4"]}
chrono = { version = "0.4.*", features = ["serde", "wasmbind"]}
