[package]
name = "eingang"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"]}
uuid = { version = "0.8.*", features = ["serde", "wasm-bindgen", "v4"]}
chrono = { version = "0.4.*", features = ["serde", "wasmbind"]}
anyhow = "1.0.*"
