[package]
name = "eingang-frontend"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.*"
wasm-bindgen = "0.2.*"
eingang = { path = "../base/" }

[lib]
crate-type = ["cdylib", "rlib"]
