[package]
name = "eingang-frontend"
version = "0.1.0"
authors = ["ucyo <cayoglu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.*"
yew-router = "0.14.*"
wasm-bindgen = "0.2.*"
eingang = { path = "../base/" }
anyhow = "1.0.*"
uuid = { version = "0.8.*", features = ["serde", "wasm-bindgen", "v4"]}

[lib]
crate-type = ["cdylib", "rlib"]
